<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/llCheckoutTop"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/app_dark_color"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/backarrow"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/checkout"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:background="#BCBCBC" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/add_card"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/card_layout" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:background="#BCBCBC" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/credit_card"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/clear_all"
                android:layout_alignParentEnd="true"
                android:textColor="#10436C"
                android:layout_marginEnd="15dp"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="Cardholder Name"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="#BABABA"
            android:inputType="textPersonName"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/john_phillipe"
            android:textColorHint="@color/grey_color"
            android:textSize="16sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="Email"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="#BABABA"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif-medium"
            android:hint="enter valid email id "
            android:textColorHint="@color/grey_color"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/address"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/add_line_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="#BABABA"
            android:inputType="textPersonName"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/address"
            android:textColorHint="@color/grey_color"
            android:textSize="16sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/card_number"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="#BABABA"
            android:inputType="number"
            android:fontFamily="sans-serif-medium"
            android:hint="*** *** **** 5123"
            android:textColorHint="@color/grey_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Expiry Date"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editExpiryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:backgroundTint="#BABABA"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/_27_05"
                    android:inputType="number"
                    android:textColorHint="@color/grey_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="CVV"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editCvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:backgroundTint="#BABABA"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/_345"
                    android:maxLength="3"
                    android:textColorHint="@color/grey_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/save_credit_card_info"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="@color/app_dark_color"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                app:trackTint="#4621205A"
                android:checked="true"
                android:layout_marginHorizontal="15dp" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_app_pink_colorgradient_round"
            android:text="Pay Now"

            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>